--- a/Images/markovdiagram.tex
+++ b/Images/markovdiagram.tex
@@ -17,28 +17,28 @@
     \node (ab) [state] at ($(aa) + (3,0)$) {$(0,1)$};
     \node (ac) [state] at ($(ab) + (3,0)$) {$(0,2)$};
     \node (ellipsisa1) at ($(ac) + (3,0)$) {$\dots$};
-    \node(ak) [state] at ($(ellipsisa1) + (3,0)$) {$(0,K_{\RG})$};
+    \node(ak) [state] at ($(ellipsisa1) + (3,0)$) {$(0,K_{1})$};
     \node (ellipsisa2) at ($(ak) + (3,0)$) {$\dots$};
-    \node(az) [state] at ($(ellipsisa2) + (3,0)$) {$(0,c_{\RG})$};
+    \node(az) [state] at ($(ellipsisa2) + (3,0)$) {$(0,c_{1})$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (aa) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ab);
-    \draw (aa) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ab);
+    \draw (aa) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ab);
+    \draw (aa) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ab);
 
-    \draw (ab) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ac);
-    \draw (ab) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ac);
+    \draw (ab) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ac);
+    \draw (ab) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ac);
 
-    \draw (ac) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ellipsisa1);
-    \draw (ac) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisa1);
+    \draw (ac) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ellipsisa1);
+    \draw (ac) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisa1);
 
-    \draw (ellipsisa1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ak);
-    \draw (ellipsisa1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ak);
+    \draw (ellipsisa1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ak);
+    \draw (ellipsisa1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ak);
 
-    \draw (ak) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (ellipsisa2);
-    \draw (ak) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisa2);
+    \draw (ak) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (ellipsisa2);
+    \draw (ak) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisa2);
 
-    \draw (ellipsisa2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (az);
-    \draw (ellipsisa2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (az);
+    \draw (ellipsisa2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (az);
+    \draw (ellipsisa2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (az);
     % -----------------------------------------------
     % Second row--------------------------------------
     % -----------------------------------------------
@@ -46,49 +46,49 @@
     \node (bb) [state] at ($(ba) + (3,0)$) {$(1,1)$};
     \node (bc) [state] at ($(bb) + (3,0)$) {$(1,2)$};
     \node (ellipsisb1) at ($(bc) + (3,0)$) {$\dots$};
-    \node(bk) [state] at ($(ellipsisb1) + (3,0)$) {$(1,K_{\RG})$};
+    \node(bk) [state] at ($(ellipsisb1) + (3,0)$) {$(1,K_{1})$};
     \node (ellipsisb2) at ($(bk) + (3,0)$) {$\dots$};
-    \node(bz) [state] at ($(ellipsisb2) + (3,0)$) {$(1,c_{\RG})$};
+    \node(bz) [state] at ($(ellipsisb2) + (3,0)$) {$(1,c_{1})$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (ba) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (bb);
-    \draw (ba) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (bb);
+    \draw (ba) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (bb);
+    \draw (ba) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (bb);
 
-    \draw (bb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (bc);
-    \draw (bb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (bc);
+    \draw (bb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (bc);
+    \draw (bb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (bc);
 
-    \draw (bc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ellipsisb1);
-    \draw (bc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisb1);
+    \draw (bc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ellipsisb1);
+    \draw (bc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisb1);
 
-    \draw (ellipsisb1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (bk);
-    \draw (ellipsisb1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (bk);
+    \draw (ellipsisb1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (bk);
+    \draw (ellipsisb1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (bk);
 
-    \draw (bk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (ellipsisb2);
-    \draw (bk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisb2);
+    \draw (bk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (ellipsisb2);
+    \draw (bk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisb2);
 
-    \draw (ellipsisb2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (bz);
-    \draw (ellipsisb2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (bz);
+    \draw (ellipsisb2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (bz);
+    \draw (ellipsisb2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (bz);
     % With previous row:
-    \draw (aa) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ba);
-    \draw (aa) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ba);
+    \draw (aa) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ba);
+    \draw (aa) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ba);
 
-    \draw (ab) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (bb);
-    \draw (ab) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (bb);
+    \draw (ab) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (bb);
+    \draw (ab) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (bb);
 
-    \draw (ac) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (bc);
-    \draw (ac) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (bc);
+    \draw (ac) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (bc);
+    \draw (ac) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (bc);
 
-    \draw (ellipsisa1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ellipsisb1);
-    \draw (ellipsisa1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisb1);
+    \draw (ellipsisa1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ellipsisb1);
+    \draw (ellipsisa1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisb1);
 
-    \draw (ak) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (bk);
-    \draw (ak) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (bk);
+    \draw (ak) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (bk);
+    \draw (ak) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (bk);
 
-    \draw (ellipsisa2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ellipsisb2);
-    \draw (ellipsisa2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisb2);
+    \draw (ellipsisa2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ellipsisb2);
+    \draw (ellipsisa2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisb2);
 
-    \draw (az) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (bz);
-    \draw (az) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (bz);
+    \draw (az) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (bz);
+    \draw (az) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (bz);
     % -----------------------------------------------
     % Third row--------------------------------------
     % -----------------------------------------------
@@ -96,49 +96,49 @@
     \node (cb) [state] at ($(ca) + (3,0)$) {$(2,1)$};
     \node (cc) [state] at ($(cb) + (3,0)$) {$(2,2)$};
     \node (ellipsisc1) at ($(cc) + (3,0)$) {$\dots$};
-    \node(ck) [state] at ($(ellipsisc1) + (3,0)$) {$(2,K_{\RG})$};
+    \node(ck) [state] at ($(ellipsisc1) + (3,0)$) {$(2,K_{1})$};
     \node (ellipsisc2) at ($(ck) + (3,0)$) {$\dots$};
-    \node(cz) [state] at ($(ellipsisc2) + (3,0)$) {$(2,c_{\RG})$};
+    \node(cz) [state] at ($(ellipsisc2) + (3,0)$) {$(2,c_{1})$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (ca) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (cb);
-    \draw (ca) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (cb);
+    \draw (ca) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (cb);
+    \draw (ca) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (cb);
 
-    \draw (cb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (cc);
-    \draw (cb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (cc);
+    \draw (cb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (cc);
+    \draw (cb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (cc);
 
-    \draw (cc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ellipsisc1);
-    \draw (cc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisc1);
+    \draw (cc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ellipsisc1);
+    \draw (cc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisc1);
 
-    \draw (ellipsisc1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ck);
-    \draw (ellipsisc1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ck);
+    \draw (ellipsisc1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ck);
+    \draw (ellipsisc1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ck);
 
-    \draw (ck) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (ellipsisc2);
-    \draw (ck) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisc2);
+    \draw (ck) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (ellipsisc2);
+    \draw (ck) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisc2);
 
-    \draw (ellipsisc2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (cz);
-    \draw (ellipsisc2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (cz);
+    \draw (ellipsisc2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (cz);
+    \draw (ellipsisc2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (cz);
     % With previous row:
-    \draw (ba) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ca);
-    \draw (ba) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ca);
+    \draw (ba) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ca);
+    \draw (ba) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ca);
 
-    \draw (bb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (cb);
-    \draw (bb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (cb);
+    \draw (bb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (cb);
+    \draw (bb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (cb);
 
-    \draw (bc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (cc);
-    \draw (bc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (cc);
+    \draw (bc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (cc);
+    \draw (bc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (cc);
 
-    \draw (ellipsisb1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ellipsisc1);
-    \draw (ellipsisb1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisc1);
+    \draw (ellipsisb1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ellipsisc1);
+    \draw (ellipsisb1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisc1);
 
-    \draw (bk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ck);
-    \draw (bk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ck);
+    \draw (bk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ck);
+    \draw (bk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ck);
 
-    \draw (ellipsisb2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ellipsisc2);
-    \draw (ellipsisb2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisc2);
+    \draw (ellipsisb2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ellipsisc2);
+    \draw (ellipsisb2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisc2);
 
-    \draw (bz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (cz);
-    \draw (bz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (cz);
+    \draw (bz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (cz);
+    \draw (bz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (cz);
     % -----------------------------------------------
     % Fourth row--------------------------------------
     % -----------------------------------------------
@@ -151,94 +151,94 @@
     \node(dz) at ($(ellipsisd2) + (3,0)$) {$\vdots$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (da) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (db);
-    \draw (da) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (db);
+    \draw (da) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (db);
+    \draw (da) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (db);
 
-    \draw (db) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (dc);
-    \draw (db) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (dc);
+    \draw (db) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (dc);
+    \draw (db) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (dc);
 
-    \draw (dc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (ellipsisd1);
-    \draw (dc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisd1);
+    \draw (dc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (ellipsisd1);
+    \draw (dc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisd1);
 
-    \draw (ellipsisd1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(a)}$} (dk);
-    \draw (ellipsisd1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (dk);
+    \draw (ellipsisd1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(a)}$} (dk);
+    \draw (ellipsisd1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (dk);
 
-    \draw (dk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (ellipsisd2);
-    \draw (dk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisd2);
+    \draw (dk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (ellipsisd2);
+    \draw (dk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisd2);
 
-    \draw (ellipsisd2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(b)}$} (dz);
-    \draw (ellipsisd2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (dz);
+    \draw (ellipsisd2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(b)}$} (dz);
+    \draw (ellipsisd2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (dz);
     % With previous row:
-    \draw (ca) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (da);
-    \draw (ca) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (da);
+    \draw (ca) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (da);
+    \draw (ca) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (da);
 
-    \draw (cb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (db);
-    \draw (cb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (db);
+    \draw (cb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (db);
+    \draw (cb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (db);
 
-    \draw (cc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (dc);
-    \draw (cc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (dc);
+    \draw (cc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (dc);
+    \draw (cc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (dc);
 
-    \draw (ellipsisc1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ellipsisd1);
-    \draw (ellipsisc1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisd1);
+    \draw (ellipsisc1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ellipsisd1);
+    \draw (ellipsisc1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisd1);
 
-    \draw (ck) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (dk);
-    \draw (ck) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (dk);
+    \draw (ck) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (dk);
+    \draw (ck) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (dk);
 
-    \draw (ellipsisc2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ellipsisd2);
-    \draw (ellipsisc2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisd2);
+    \draw (ellipsisc2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ellipsisd2);
+    \draw (ellipsisc2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisd2);
 
-    \draw (cz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (dz);
-    \draw (cz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (dz);
+    \draw (cz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (dz);
+    \draw (cz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (dz);
     % -----------------------------------------------
     % Fifth row--------------------------------------
     % -----------------------------------------------
-    \node (ea) [state] at (0,-12) {$(K_{\NH},0)$};
-    \node (eb) [state] at ($(ea) + (3,0)$) {$(K_{\NH},1)$};
-    \node (ec) [state] at ($(eb) + (3,0)$) {$(K_{\NH},2)$};
+    \node (ea) [state] at (0,-12) {$(K_{2},0)$};
+    \node (eb) [state] at ($(ea) + (3,0)$) {$(K_{2},1)$};
+    \node (ec) [state] at ($(eb) + (3,0)$) {$(K_{2},2)$};
     \node (ellipsise1) at ($(ec) + (3,0)$) {$\dots$};
-    \node(ek) [state] at ($(ellipsise1) + (3,0)$) {$(K_{\NH},K_{\RG})$};
+    \node(ek) [state] at ($(ellipsise1) + (3,0)$) {$(K_{2},K_{1})$};
     \node (ellipsise2) at ($(ek) + (3,0)$) {$\dots$};
-    \node(ez) [state] at ($(ellipsise2) + (3,0)$) {$(K_{\NH},c_{\RG})$};
+    \node(ez) [state] at ($(ellipsise2) + (3,0)$) {$(K_{2},c_{1})$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (ea) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (eb);
-    \draw (ea) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (eb);
+    \draw (ea) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (eb);
+    \draw (ea) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (eb);
 
-    \draw (eb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (ec);
-    \draw (eb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ec);
+    \draw (eb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (ec);
+    \draw (eb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ec);
 
-    \draw (ec) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (ellipsise1);
-    \draw (ec) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsise1);
+    \draw (ec) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (ellipsise1);
+    \draw (ec) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsise1);
 
-    \draw (ellipsise1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (ek);
-    \draw (ellipsise1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ek);
+    \draw (ellipsise1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (ek);
+    \draw (ellipsise1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ek);
 
-    \draw (ek) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (ellipsise2);
-    \draw (ek) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsise2);
+    \draw (ek) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (ellipsise2);
+    \draw (ek) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsise2);
 
-    \draw (ellipsise2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (ez);
-    \draw (ellipsise2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ez);
+    \draw (ellipsise2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (ez);
+    \draw (ellipsise2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ez);
     % With previous row:
-    \draw (da) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ea);
-    \draw (da) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ea);
+    \draw (da) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ea);
+    \draw (da) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ea);
 
-    \draw (db) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (eb);
-    \draw (db) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (eb);
+    \draw (db) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (eb);
+    \draw (db) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (eb);
 
-    \draw (dc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ec);
-    \draw (dc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ec);
+    \draw (dc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ec);
+    \draw (dc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ec);
 
-    \draw (ellipsisd1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(a)}$} (ellipsise1);
-    \draw (ellipsisd1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsise1);
+    \draw (ellipsisd1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(a)}$} (ellipsise1);
+    \draw (ellipsisd1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsise1);
 
-    \draw (dk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ek);
-    \draw (dk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ek);
+    \draw (dk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ek);
+    \draw (dk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ek);
 
-    \draw (ellipsisd2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ellipsise2);
-    \draw (ellipsisd2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsise2);
+    \draw (ellipsisd2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ellipsise2);
+    \draw (ellipsisd2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsise2);
 
-    \draw (dz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(b)}$} (ez);
-    \draw (dz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ez);
+    \draw (dz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(b)}$} (ez);
+    \draw (dz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ez);
     % Sixth row--------------------------------------
     \node (fa) at (0,-15) {$\vdots$};
     \node (fb) at ($(fa) + (3,0)$) {$\vdots$};
@@ -249,91 +249,91 @@
     \node(fz) at ($(ellipsisf2) + (3,0)$) {$\vdots$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (fa) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (fb);
-    \draw (fa) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (fb);
+    \draw (fa) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (fb);
+    \draw (fa) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (fb);
 
-    \draw (fb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (fc);
-    \draw (fb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (fc);
+    \draw (fb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (fc);
+    \draw (fb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (fc);
 
-    \draw (fc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (ellipsisf1);
-    \draw (fc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisf1);
+    \draw (fc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (ellipsisf1);
+    \draw (fc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisf1);
 
-    \draw (ellipsisf1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(c)}$} (fk);
-    \draw (ellipsisf1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (fk);
+    \draw (ellipsisf1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(c)}$} (fk);
+    \draw (ellipsisf1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (fk);
 
-    \draw (fk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (ellipsisf2);
-    \draw (fk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisf2);
+    \draw (fk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (ellipsisf2);
+    \draw (fk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisf2);
 
-    \draw (ellipsisf2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (fz);
-    \draw (ellipsisf2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (fz);
+    \draw (ellipsisf2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (fz);
+    \draw (ellipsisf2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (fz);
     % With previous row:
-    \draw (ea) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (fa);
-    \draw (ea) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (fa);
+    \draw (ea) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (fa);
+    \draw (ea) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (fa);
 
-    \draw (eb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (fb);
-    \draw (eb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (fb);
+    \draw (eb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (fb);
+    \draw (eb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (fb);
 
-    \draw (ec) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (fc);
-    \draw (ec) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (fc);
+    \draw (ec) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (fc);
+    \draw (ec) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (fc);
 
-    \draw (ellipsise1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (ellipsisf1);
-    \draw (ellipsise1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisf1);
+    \draw (ellipsise1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (ellipsisf1);
+    \draw (ellipsise1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisf1);
 
-    \draw (ek) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (fk);
-    \draw (ek) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (fk);
+    \draw (ek) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (fk);
+    \draw (ek) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (fk);
 
-    \draw (ellipsise2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (ellipsisf2);
-    \draw (ellipsise2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisf2);
+    \draw (ellipsise2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (ellipsisf2);
+    \draw (ellipsise2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisf2);
 
-    \draw (ez) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (fz);
-    \draw (ez) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (fz);
+    \draw (ez) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (fz);
+    \draw (ez) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (fz);
     % Final row--------------------------------------
-    \node (za) [state] at (0,-18) {$(c_{\NH},0)$};
-    \node (zb) [state] at ($(za) + (3,0)$) {$(c_{\NH},1)$};
-    \node (zc) [state] at ($(zb) + (3,0)$) {$(c_{\NH},2)$};
+    \node (za) [state] at (0,-18) {$(c_{2},0)$};
+    \node (zb) [state] at ($(za) + (3,0)$) {$(c_{2},1)$};
+    \node (zc) [state] at ($(zb) + (3,0)$) {$(c_{2},2)$};
     \node (ellipsisz1) at ($(zc) + (3,0)$) {$\dots$};
-    \node(zk) [state] at ($(ellipsisz1) + (3,0)$) {$(c_{\NH},K_{\RG})$};
+    \node(zk) [state] at ($(ellipsisz1) + (3,0)$) {$(c_{2},K_{1})$};
     \node (ellipsisz2) at ($(zk) + (3,0)$) {$\dots$};
-    \node(zz) [state] at ($(ellipsisz2) + (3,0)$) {$(c_{\NH},c_{\RG})$};
+    \node(zz) [state] at ($(ellipsisz2) + (3,0)$) {$(c_{2},c_{1})$};
     % Transitions -----------------------------------
     % On Row:
-    \draw (za) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (zb);
-    \draw (za) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (zb);
+    \draw (za) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (zb);
+    \draw (za) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (zb);
 
-    \draw (zb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (zc);
-    \draw (zb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (zc);
+    \draw (zb) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (zc);
+    \draw (zb) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (zc);
 
-    \draw (zc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (ellipsisz1);
-    \draw (zc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisz1);
+    \draw (zc) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (ellipsisz1);
+    \draw (zc) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisz1);
 
-    \draw (ellipsisz1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (zk);
-    \draw (ellipsisz1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (zk);
+    \draw (ellipsisz1) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (zk);
+    \draw (ellipsisz1) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (zk);
 
-    \draw (zk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (ellipsisz2);
-    \draw (zk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (ellipsisz2);
+    \draw (zk) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (ellipsisz2);
+    \draw (zk) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (ellipsisz2);
 
-    \draw (ellipsisz2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{\RG}^{(d)}$} (zz);
-    \draw (ellipsisz2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{\RG}$} (zz);
+    \draw (ellipsisz2) edge[out=45,in=135,->,thick] node [above] {\tiny$\lambda_{1}^{(d)}$} (zz);
+    \draw (ellipsisz2) edge[out=-45,in=-135,<-,thick] node [below] {\tiny$\mu_{1}$} (zz);
     % With previous row:
-    \draw (fa) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (za);
-    \draw (fa) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (za);
+    \draw (fa) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (za);
+    \draw (fa) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (za);
 
-    \draw (fb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (zb);
-    \draw (fb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (zb);
+    \draw (fb) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (zb);
+    \draw (fb) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (zb);
 
-    \draw (fc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (zc);
-    \draw (fc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (zc);
+    \draw (fc) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (zc);
+    \draw (fc) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (zc);
 
-    \draw (ellipsisf1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(c)}$} (ellipsisz1);
-    \draw (ellipsisf1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisz1);
+    \draw (ellipsisf1) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(c)}$} (ellipsisz1);
+    \draw (ellipsisf1) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisz1);
 
-    \draw (fk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (zk);
-    \draw (fk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (zk);
+    \draw (fk) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (zk);
+    \draw (fk) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (zk);
 
-    \draw (ellipsisf2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (ellipsisz2);
-    \draw (ellipsisf2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (ellipsisz2);
+    \draw (ellipsisf2) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (ellipsisz2);
+    \draw (ellipsisf2) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (ellipsisz2);
 
-    \draw (fz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{\NH}^{(d)}$} (zz);
-    \draw (fz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{\NH}$} (zz);
+    \draw (fz) edge[out=-125,in=125,->,thick] node [left] {\tiny$\lambda_{2}^{(d)}$} (zz);
+    \draw (fz) edge[out=-55,in=55,<-,thick] node [right] {\tiny$\mu_{2}$} (zz);
 
 \end{tikzpicture}
