--- a/paper.tex
+++ b/paper.tex
@@ -30,33 +30,33 @@
 \email{knightva@cf.ac.uk}
 }
 
-\author{
-\name{Paul Harper}
-\institute{Cardiff University}
-\iaddress{Cardiff, UK}
-\email{harper@cf.ac.uk}
-}
-
-\author{
-\name{Jeff Griffiths}
-\institute{Cardiff University}
-\iaddress{Cardiff, UK}
-\email{griffiths@cf.ac.uk}
-}
-
-\author{
-\name{Izabela Komenda}
-\institute{Cardiff University}
-\iaddress{Cardiff, UK}
-\email{komendai@cf.ac.uk}
-}
-
-\author{
-\name{Rob Shone}
-\institute{Cardiff University}
-\iaddress{Cardiff, UK}
-\email{shoner@cf.ac.uk}
-}
+%\author{
+%\name{Paul Harper}
+%\institute{Cardiff University}
+%\iaddress{Cardiff, UK}
+%\email{harper@cf.ac.uk}
+%}
+%
+%\author{
+%\name{Jeff Griffiths}
+%\institute{Cardiff University}
+%\iaddress{Cardiff, UK}
+%\email{griffiths@cf.ac.uk}
+%}
+%
+%\author{
+%\name{Izabela Komenda}
+%\institute{Cardiff University}
+%\iaddress{Cardiff, UK}
+%\email{komendai@cf.ac.uk}
+%}
+%
+%\author{
+%\name{Rob Shone}
+%\institute{Cardiff University}
+%\iaddress{Cardiff, UK}
+%\email{shoner@cf.ac.uk}
+%}
 
 \vspace{8mm}
 
@@ -215,19 +215,15 @@ Following the analysis of two critical care units (CCUs) it was found that the o
 Upon discussion with the managers in question, it was acknowledged that certain behaviours took place.
 Indeed when one CCU was at high capacity it was likely to divert patients to the other CCU.
 
-In ...
-The main proposition of the work requested by the ABUHB was to develop a mathematical model of bed occupancies at the CCUs at RG and NH.
-After an initial analysis of the data, behavioural aspects became apparent; for example, delaying patients discharge if there was no pressure on CCU beds, or admitting fewer patients if bed occupancy levels were high.
-As a result of this, a state-dependent queueing model has been developed, which includes the dependency of admission rate on actual occupancy \cite{Komenda2013}.
-This state dependent model was applied to both NH and RG separately.
-It is however obvious that the actions of one CCU impact on the other CCU, as diversion of patients from one CCU to the other sometimes occurs.
-A pictorial representation of the situation is given in Figure \ref{diagramofdiversion}.
+In \cite{knight2014} a normal form game consideration of this situation is given akin to the work on EDs in \cite{Deo2011}.
+
+A pictorial representation of the situation considered is given in Figure \ref{diagramofdiversion} where each CCU can choose a capacity threshold at which to divert patients.
 
 \begin{figure}[!htbp]
 \begin{center}
 \begin{tikzpicture}
-\node (A) at (0,0) [draw] {RG};
-\node (B) at (2,0) [draw] {NH};
+\node (A) at (0,0) [draw] {1};
+\node (B) at (2,0) [draw] {2};
 \draw [->] (-1,0) -- (A);
 \draw [->] (3,0) -- (B);
 \draw [->] (-1,0) -- ($(A)+(-.5,0)$) -- ($(A)+(-.5,.5)$) -- ($(A)+(.5,.5)$) -- ($(A)+(.5,.1)$) -- ($(B)+(-.4,.1)$);
@@ -240,7 +236,7 @@ A pictorial representation of the situation is given in Figure \ref{diagramofdiv
 \end{center}
 \end{figure}
 
-The capacity thresholds are denoted as $K_{h}\in\mathbb{Z}$ for $h\in\{\NH,\RG\}$. Note that $0\leq K_h\leq c_h$.
+The capacity thresholds are denoted as $K_{h}\in\mathbb{Z}$ for $h\in\{1,2\}$, once diverted the arrival rate is modified as shown in Figure \ref{arrivalrateregions}. Note that $0\leq K_h\leq c_h$.
 
 \begin{figure}[!htbp]
 \begin{center}
@@ -248,14 +244,14 @@ The capacity thresholds are denoted as $K_{h}\in\mathbb{Z}$ for $h\in\{\NH,\RG\}
         \draw  (0,0) rectangle (4,3);
         \draw [dashed, red, thick] (0,1) -- (4,1);
         \draw [dashed, red, thick] (3,0) -- (3,3);
-        \node at (-.5,1) {$K_{\NH}$};
-        \node at (3,3.25) {$K_{\RG}$};
+        \node at (-.5,1) {$K_{1}$};
+        \node at (3,3.25) {$K_{2}$};
         \node at (1.5,2) {$\lambda_{h}^{(a)}$};
         \node at (3.5,2) {$\lambda_{h}^{(b)}$};
         \node at (1.5,.5) {$\lambda_{h}^{(c)}$};
         \node at (3.5,.5) {$\lambda_{h}^{(d)}$};
     \end{tikzpicture}
-\caption{General arrival rates for each CCU at each region, where $h\in\{\NH, \RG\}$} \label{arrivalrateregions}
+\caption{General arrival rates for each CCU at each region, where $h\in\{1, 2\}$} \label{arrivalrateregions}
 \end{center}
 \end{figure}
 
@@ -268,18 +264,17 @@ The capacity thresholds are denoted as $K_{h}\in\mathbb{Z}$ for $h\in\{\NH,\RG\}
 
 Utilities will be of interest when this queueing theoretical model will be inserted in the game theoretical model.
 Throughput of patients is a natural choice of utility given that most hospitals are financially rewarded per served patient \cite{Pate2009}.
-For each threshold pair $(K_{\NH},K_{\RG})$, the utilisation rate $U_h$ and throughput $T_h$ can easily be obtained for each CCU: $h\in\{\text{NH},\text{RG}\}$, using the following formulas:
+For each threshold pair $(K_{1},K_{2})$, the utilisation rate $U_h$ and throughput $T_h$ can easily be obtained for each CCU: $h\in\{\text{1},\text{2}\}$, using the following formulas:
 
 $$U_{h}={{\sum_{n=0}^{c_h} nP^{(h)}(n)}\over{c_{h}}}$$
 $$T_{h}=\mu_h \sum _{n=0}^{c_h} nP^{(h)}(n)$$
 
-where $P^{(h)}=P^{(h)}(K_{\NH},K_{\RG})$ is the steady state probability distribution function (obtained from the corresponding transition matrix $Q=Q(K_{\NH},K_{\RG})$) for $h\in\{\text{NH},\text{RG}\}$.
+where $P^{(h)}=P^{(h)}(K_{1},K_{2})$ is the steady state probability distribution function (obtained from by analysing the Markov chain of Figure \ref{mc}).
 
-For $c_{\NH}=8$, $c_{\RG}=16$, $\lambda_{\NH}=(\lambda_{\NH}^{(a)},\lambda_{\NH}^{(b)},\lambda_{\NH}^{(c)},\lambda_{\NH}^{(d)})=(1.5,3.74,0,0)$, $\lambda_{\RG}=(\lambda_{\RG}^{(a)},\lambda_{\RG}^{(b)},\lambda_{\RG}^{(c)},\lambda_{\RG}^{(d)})=(2.24,0,3.74,0)$ and $(K_{\NH},K_{\RG})=(6,12)$, the steady state probabilities for each CCU are given in Figure \ref{steady_state_probs}.
-
+The optimisation problem faced by each hospital that gives rise to the game is shown in Figure \ref{model1}.
 
 \begin{figure}[!htbp]
-\hspace{2cm}For all $h\in\{\text{NH}, \text{RG}\}$ minimise:
+\hspace{2cm}For all $h\in\{\text{1}, \text{2}\}$ minimise:
 $$\left(U_{h}-t\right)^2$$
 \hspace{2cm}Subject to:
 \begin{align}
@@ -291,34 +286,12 @@ $$\left(U_{h}-t\right)^2$$
 
 This game is equivalent to a bi matrix game with restriction to pure strategies where both players aim to get their utilisation as close as possible to a certain target.
 As such a Nash Equilibrium is not guaranteed by traditional game theoretical results \cite{Nash1950}, but based on discussions with ABUHB, long term threshold policies are a realistic consideration.
+In \cite{Knight2014} theoretical results are proved that guarentee pure strategy Nash equilibria in certain cases.
 
-The following result is a sufficient condition for the existence of an equilibrium:\\
-
-
-\textbf{Theorem.}
-
-Let $f_{h}(k):[1,c_{\bar h}]\to[1,c_h]$ be the best response of player $h\in\{\NH, \RG\}$ to the diversion threshold of $\bar h\ne h$ ($\bar h\in\{\NH, \RG\}$).
-
-If $f_{h}(k)$ is a non-decreasing function in $k$ then the game of Figure \ref{model1} has at least one Nash Equilibrium.
-
-
-\textbf{proof}
-
-The function $f_h$ is well defined as it maximises a continuous function over a finite discrete set (in case of multiple values that minimize $U_h$, it is assumed that $f_h$ returns the lowest such value).
-
-As such if $f_h$ is non-decreasing then it is in fact a stepwise non-decreasing function.
-If we consider $f_{\NH}$ and $f_{\RG}$ plotted on the same axis (so that the domain of $f_{\NH}$ is the $x$-axis and the domain of $f_{\RG}$ is the y-axis) it is obvious to see that the functions must intersect at some point as shown in Figure \ref{exampleforproof}.
-
-\begin{figure}[!htbp]
-$$\begin{array}{cc}
-\includegraphics[width=.5\textwidth]{./Images/best_responses_ex_for_proof_NH.pdf}&
-\includegraphics[width=.5\textwidth]{./Images/best_responses_ex_for_proof_RG.pdf}
-\end{array}$$
-\caption{Plots of $f_{\NH}(K_{\RG})$ and $f_{\RG}(K_{\NH})$}\label{exampleforproof}
-\end{figure}
-
-This point of intersection corresponds to a Nash Equilibrium of Figure \ref{model1}.
-$\square$
+Using this and structural properties of the problem a Nash equilibria can be found.
+A variety of numerical results are shown giving the PoA for various scenarios but importantly this module can aid in the informed assignment of a policy $t$.
+Figure \ref{mintargetvdemandmodel2} show the smallest value of $t$ that gives a PoA for a variation of demand ($x=0$ corresponds to the actual demand of the system in consideration).
+We see that a value of $t=.72$ is sensible in our model.
 
 
 \begin{figure}[!htbp]
